--- a/tutorial/snippets/templates/freeIp.html
+++ b/tutorial/snippets/templates/freeIp.html
@@ -2,7 +2,7 @@
 
 
 <p>IP異動加白</p>
-<form action="/freeIp/" method="POST">
+<form action="/getGoogleAuthenticator/" method="POST">
     {% csrf_token %}
 
     <div class="">
